--- a/public/css/tailwindCommon.css
+++ b/public/css/tailwindCommon.css
@@ -619,12 +619,8 @@ video {
   top: -3.75rem;
 }
 
-.-right-12\.5 {
-  right: -3.125rem;
-}
-
-.-right-12 {
-  right: -3rem;
+.-right-0 {
+  right: -0px;
 }
 
 .left-0 {
@@ -655,6 +651,18 @@ video {
   top: 130%;
 }
 
+.left-\[0\%\] {
+  left: 0%;
+}
+
+.top-\[-0\.3em\] {
+  top: -0.3em;
+}
+
+.left-\[100\%\] {
+  left: 100%;
+}
+
 .z-10 {
   z-index: 10;
 }
@@ -669,6 +677,14 @@ video {
 
 .z-\[-1\] {
   z-index: -1;
+}
+
+.z-\[1\] {
+  z-index: 1;
+}
+
+.z-\[2\] {
+  z-index: 2;
 }
 
 .col-span-4 {
@@ -717,6 +733,21 @@ video {
 .my-16 {
   margin-top: 4rem;
   margin-bottom: 4rem;
+}
+
+.mx-\[-15px\] {
+  margin-left: -15px;
+  margin-right: -15px;
+}
+
+.my-\[10px\] {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.mx-\[5px\] {
+  margin-left: 5px;
+  margin-right: 5px;
 }
 
 .mt-3 {
@@ -827,6 +858,58 @@ video {
   margin-top: 1.5rem;
 }
 
+.mb-\[30px\] {
+  margin-bottom: 30px;
+}
+
+.mb-\[15px\] {
+  margin-bottom: 15px;
+}
+
+.ml-2 {
+  margin-left: 0.5rem;
+}
+
+.mr-\[2px\] {
+  margin-right: 2px;
+}
+
+.ml-\[5px\] {
+  margin-left: 5px;
+}
+
+.mr-auto {
+  margin-right: auto;
+}
+
+.mb-\[10px\] {
+  margin-bottom: 10px;
+}
+
+.mt-\[-5px\] {
+  margin-top: -5px;
+}
+
+.mt-\[30px\] {
+  margin-top: 30px;
+}
+
+.mb-\[1em\] {
+  margin-bottom: 1em;
+}
+
+.ml-\[-0\.5em\] {
+  margin-left: -0.5em;
+}
+
+.ml-\[3px\] {
+  margin-left: 3px;
+}
+
+.mr-\[10px\] {
+  margin-right: 10px;
+}
+
 .block {
   display: block;
 }
@@ -837,6 +920,10 @@ video {
 
 .flex {
   display: flex;
+}
+
+.inline-flex {
+  display: inline-flex;
 }
 
 .table {
@@ -907,12 +994,40 @@ video {
   height: 24rem;
 }
 
+.h-full {
+  height: 100%;
+}
+
+.h-\[45px\] {
+  height: 45px;
+}
+
+.h-\[48px\] {
+  height: 48px;
+}
+
+.h-\[0\.5em\] {
+  height: 0.5em;
+}
+
+.h-\[1em\] {
+  height: 1em;
+}
+
+.h-\[80px\] {
+  height: 80px;
+}
+
 .h-24 {
   height: 6rem;
 }
 
 .h-14 {
   height: 3.5rem;
+}
+
+.min-h-\[280px\] {
+  min-height: 280px;
 }
 
 .w-\[14\.2rem\] {
@@ -971,12 +1086,44 @@ video {
   width: 16.666667%;
 }
 
+.w-\[75\%\] {
+  width: 75%;
+}
+
+.w-\[33\.33\%\] {
+  width: 33.33%;
+}
+
+.w-\[45px\] {
+  width: 45px;
+}
+
+.w-\[25\%\] {
+  width: 25%;
+}
+
+.w-\[48px\] {
+  width: 48px;
+}
+
+.w-\[1em\] {
+  width: 1em;
+}
+
+.w-\[80px\] {
+  width: 80px;
+}
+
 .w-14 {
   width: 3.5rem;
 }
 
 .min-w-\[12rem\] {
   min-width: 12rem;
+}
+
+.max-w-\[1400px\] {
+  max-width: 1400px;
 }
 
 .flex-1 {
@@ -993,6 +1140,10 @@ video {
 
 .cursor-pointer {
   cursor: pointer;
+}
+
+.cursor-ew-resize {
+  cursor: ew-resize;
 }
 
 .select-none {
@@ -1026,6 +1177,18 @@ video {
 
 .flex-col {
   flex-direction: column;
+}
+
+.flex-wrap {
+  flex-wrap: wrap;
+}
+
+.content-center {
+  align-content: center;
+}
+
+.items-start {
+  align-items: flex-start;
 }
 
 .items-center {
@@ -1073,6 +1236,15 @@ video {
        column-gap: 0.25rem;
 }
 
+.gap-x-\[30\] {
+  -moz-column-gap: 30;
+       column-gap: 30;
+}
+
+.self-center {
+  align-self: center;
+}
+
 .overflow-auto {
   overflow: auto;
 }
@@ -1089,7 +1261,19 @@ video {
   border-radius: 9999px;
 }
 
+.rounded-\[5px\] {
+  border-radius: 5px;
+}
+
+.rounded-\[1em\] {
+  border-radius: 1em;
+}
+
 .border {
+  border-width: 1px;
+}
+
+.border-\[1px\] {
   border-width: 1px;
 }
 
@@ -1101,6 +1285,10 @@ video {
   border-right-width: 1px;
 }
 
+.border-solid {
+  border-style: solid;
+}
+
 .border-primary-color {
   --tw-border-opacity: 1;
   border-color: rgb(59 183 126 / var(--tw-border-opacity));
@@ -1109,6 +1297,20 @@ video {
 .border-secondary-color {
   --tw-border-opacity: 1;
   border-color: rgb(255 186 67 / var(--tw-border-opacity));
+}
+
+.border-white-light-color {
+  --tw-border-opacity: 1;
+  border-color: rgb(230 230 230 / var(--tw-border-opacity));
+}
+
+.border-white-color {
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+
+.border-\[rgba\(82\2c 95\2c 129\2c 0\.09\)\] {
+  border-color: rgba(82,95,129,0.09);
 }
 
 .border-slate-300 {
@@ -1160,6 +1362,21 @@ video {
   background-color: rgb(249 250 255 / var(--tw-bg-opacity));
 }
 
+.bg-white-color {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-light-yellow-color {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 248 237 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#602053\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(96 32 83 / var(--tw-bg-opacity));
+}
+
 .bg-\[\#f5365c\] {
   --tw-bg-opacity: 1;
   background-color: rgb(245 54 92 / var(--tw-bg-opacity));
@@ -1202,6 +1419,14 @@ video {
   --tw-gradient-to: #ffba43;
 }
 
+.bg-cover {
+  background-size: cover;
+}
+
+.bg-no-repeat {
+  background-repeat: no-repeat;
+}
+
 .p-7\.5 {
   padding: 1.875rem;
 }
@@ -1212,6 +1437,18 @@ video {
 
 .p-4 {
   padding: 1rem;
+}
+
+.p-\[25px\] {
+  padding: 25px;
+}
+
+.p-\[10px\] {
+  padding: 10px;
+}
+
+.p-\[30px\] {
+  padding: 30px;
 }
 
 .p-6 {
@@ -1311,6 +1548,46 @@ video {
   padding-bottom: 1.25rem;
 }
 
+.py-\[120px\] {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+
+.px-\[15px\] {
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.py-\[10px\] {
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.px-\[10px\] {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.py-\[15px\] {
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+
+.px-\[5px\] {
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+.py-\[14px\] {
+  padding-top: 14px;
+  padding-bottom: 14px;
+}
+
+.py-\[9px\] {
+  padding-top: 9px;
+  padding-bottom: 9px;
+}
+
 .pt-36 {
   padding-top: 9rem;
 }
@@ -1365,6 +1642,30 @@ video {
 
 .pr-2 {
   padding-right: 0.5rem;
+}
+
+.pr-\[20px\] {
+  padding-right: 20px;
+}
+
+.pl-\[15px\] {
+  padding-left: 15px;
+}
+
+.pt-\[10px\] {
+  padding-top: 10px;
+}
+
+.pb-\[10px\] {
+  padding-bottom: 10px;
+}
+
+.pr-\[50px\] {
+  padding-right: 50px;
+}
+
+.pb-\[15px\] {
+  padding-bottom: 15px;
 }
 
 .pb-8 {
@@ -1467,6 +1768,34 @@ video {
   font-size: 1.2rem;
 }
 
+.text-\[18px\] {
+  font-size: 18px;
+}
+
+.text-\[1\.37rem\] {
+  font-size: 1.37rem;
+}
+
+.text-\[14px\] {
+  font-size: 14px;
+}
+
+.text-\[16px\] {
+  font-size: 16px;
+}
+
+.text-\[1\.37em\] {
+  font-size: 1.37em;
+}
+
+.text-\[20px\] {
+  font-size: 20px;
+}
+
+.text-\[0\.857em\] {
+  font-size: 0.857em;
+}
+
 .text-\[1\.5rem\] {
   font-size: 1.5rem;
 }
@@ -1483,8 +1812,24 @@ video {
   font-weight: 600;
 }
 
+.font-\[600\] {
+  font-weight: 600;
+}
+
+.font-\[500\] {
+  font-weight: 500;
+}
+
+.font-\[900\] {
+  font-weight: 900;
+}
+
 .uppercase {
   text-transform: uppercase;
+}
+
+.capitalize {
+  text-transform: capitalize;
 }
 
 .italic {
@@ -1519,12 +1864,24 @@ video {
   line-height: 1.375;
 }
 
+.leading-\[48px\] {
+  line-height: 48px;
+}
+
+.leading-\[1\.3\] {
+  line-height: 1.3;
+}
+
 .tracking-wider {
   letter-spacing: 0.05em;
 }
 
 .tracking-wide {
   letter-spacing: 0.025em;
+}
+
+.tracking-\[-0\.02em\] {
+  letter-spacing: -0.02em;
 }
 
 .text-title-color {
@@ -1567,6 +1924,16 @@ video {
   color: rgb(100 116 139 / var(--tw-text-opacity));
 }
 
+.text-white-color {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.no-underline {
+  -webkit-text-decoration-line: none;
+          text-decoration-line: none;
+}
+
 .placeholder-body-text::-moz-placeholder {
   --tw-placeholder-opacity: 1;
   color: rgb(74 74 74 / var(--tw-placeholder-opacity));
@@ -1589,6 +1956,12 @@ video {
 .shadow-custom-shadow-1 {
   --tw-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
   --tw-shadow-colored: 0px 8px 24px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[0px_1px_30px_0px_rgb\(36\2c 38\2c 43\2c 0\.1\)\] {
+  --tw-shadow: 0px 1px 30px 0px rgb(36,38,43,0.1);
+  --tw-shadow-colored: 0px 1px 30px 0px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -1625,6 +1998,14 @@ video {
   transition-duration: 500ms;
 }
 
+.duration-\[0\.7s\] {
+  transition-duration: 0.7s;
+}
+
+.duration-\[0\.5s\] {
+  transition-duration: 0.5s;
+}
+
 .ease-linear {
   transition-timing-function: linear;
 }
@@ -1639,6 +2020,37 @@ video {
   box-shadow: 0px 1px 30px 0px rgb(36 38 43 / 10%);
 }
 
+.before\:absolute::before {
+  content: var(--tw-content);
+  position: absolute;
+}
+
+.before\:bottom-0::before {
+  content: var(--tw-content);
+  bottom: 0px;
+}
+
+.before\:h-\[3px\]::before {
+  content: var(--tw-content);
+  height: 3px;
+}
+
+.before\:w-\[28px\]::before {
+  content: var(--tw-content);
+  width: 28px;
+}
+
+.before\:bg-secondary-color::before {
+  content: var(--tw-content);
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 186 67 / var(--tw-bg-opacity));
+}
+
+.before\:content-\[attr\(before\)\]::before {
+  --tw-content: attr(before);
+  content: var(--tw-content);
+}
+
 .hover\:cursor-pointer:hover {
   cursor: pointer;
 }
@@ -1646,6 +2058,11 @@ video {
 .hover\:border-secondary-color:hover {
   --tw-border-opacity: 1;
   border-color: rgb(255 186 67 / var(--tw-border-opacity));
+}
+
+.hover\:border-primary-color:hover {
+  --tw-border-opacity: 1;
+  border-color: rgb(59 183 126 / var(--tw-border-opacity));
 }
 
 .hover\:bg-primary-color:hover {
@@ -1687,6 +2104,11 @@ video {
   color: rgb(30 41 59 / var(--tw-text-opacity));
 }
 
+.hover\:text-white-color:hover {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
 .focus\:border:focus {
   border-width: 1px;
 }
@@ -1701,8 +2123,22 @@ video {
   outline-offset: 2px;
 }
 
+.focus\:outline-primary-color:focus {
+  outline-color: #3bb77e;
+}
+
 .group:hover .group-hover\:scale-105 {
   --tw-scale-x: 1.05;
   --tw-scale-y: 1.05;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.group:hover .group-hover\:text-primary-color {
+  --tw-text-opacity: 1;
+  color: rgb(59 183 126 / var(--tw-text-opacity));
+}
+
+.group:hover .group-hover\:text-white-color {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
