--- a/public/css/base.css
+++ b/public/css/base.css
@@ -27,9 +27,9 @@
 
 /* Các biến phông chữ */
 :root {
-  --primary-font: "Open Sans", sans-serif;
+  --primary-font: "Open Sans", sans-serif ;
 }
 
 html {
-  font-family: var(--primary-font);
+  font-family: var(--primary-font) !important;
 }
