--- a/public/css/tailwindCommon.css
+++ b/public/css/tailwindCommon.css
@@ -706,6 +706,30 @@ video {
   z-index: 2;
 }
 
+.z-\[\] {
+  z-index: ;
+}
+
+.z-\[10\] {
+  z-index: 10;
+}
+
+.z-\[104\] {
+  z-index: 104;
+}
+
+.z-\[1041\] {
+  z-index: 1041;
+}
+
+.z-\[2000\] {
+  z-index: 2000;
+}
+
+.z-\[1000000\] {
+  z-index: 1000000;
+}
+
 .col-span-4 {
   grid-column: span 4 / span 4;
 }
@@ -762,14 +786,14 @@ video {
   margin-bottom: 4rem;
 }
 
-.my-\[10px\] {
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
-
 .mx-\[-15px\] {
   margin-left: -15px;
   margin-right: -15px;
+}
+
+.my-\[10px\] {
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .mx-\[5px\] {
@@ -1095,16 +1119,16 @@ video {
   height: 2.5rem;
 }
 
-.h-8 {
-  height: 2rem;
-}
-
 .h-24 {
   height: 6rem;
 }
 
 .h-14 {
   height: 3.5rem;
+}
+
+.h-8 {
+  height: 2rem;
 }
 
 .min-h-\[280px\] {
@@ -1211,24 +1235,20 @@ video {
   width: 20rem;
 }
 
-.w-\[20rem\] {
-  width: 20rem;
-}
-
-.w-8 {
-  width: 2rem;
+.w-52 {
+  width: 13rem;
 }
 
 .w-14 {
   width: 3.5rem;
 }
 
-.w-5 {
-  width: 1.25rem;
+.w-\[20rem\] {
+  width: 20rem;
 }
 
-.w-52 {
-  width: 13rem;
+.w-8 {
+  width: 2rem;
 }
 
 .min-w-\[12rem\] {
@@ -1589,11 +1609,6 @@ video {
   background-color: rgb(71 85 105 / var(--tw-bg-opacity));
 }
 
-.bg-blue-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
-}
-
 .bg-\[\#f5365c\] {
   --tw-bg-opacity: 1;
   background-color: rgb(245 54 92 / var(--tw-bg-opacity));
@@ -1612,6 +1627,36 @@ video {
 .bg-\[\#11cdef\] {
   --tw-bg-opacity: 1;
   background-color: rgb(17 205 239 / var(--tw-bg-opacity));
+}
+
+.bg-blue-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
+}
+
+.bg-slate-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(100 116 139 / var(--tw-bg-opacity));
+}
+
+.bg-red-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
+}
+
+.bg-slate-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(148 163 184 / var(--tw-bg-opacity));
+}
+
+.bg-red-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 113 113 / var(--tw-bg-opacity));
+}
+
+.bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
 
 .bg-opacity-75 {
@@ -1698,6 +1743,10 @@ video {
 
 .p-0 {
   padding: 0px;
+}
+
+.p-20 {
+  padding: 5rem;
 }
 
 .py-26 {
@@ -1800,16 +1849,6 @@ video {
   padding-bottom: 10px;
 }
 
-.py-\[15px\] {
-  padding-top: 15px;
-  padding-bottom: 15px;
-}
-
-.px-\[5px\] {
-  padding-left: 5px;
-  padding-right: 5px;
-}
-
 .py-\[14px\] {
   padding-top: 14px;
   padding-bottom: 14px;
@@ -1818,6 +1857,16 @@ video {
 .px-\[10px\] {
   padding-left: 10px;
   padding-right: 10px;
+}
+
+.py-\[15px\] {
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+
+.px-\[5px\] {
+  padding-left: 5px;
+  padding-right: 5px;
 }
 
 .py-\[9px\] {
@@ -1934,16 +1983,12 @@ video {
   padding-bottom: 0.5rem;
 }
 
-.pt-20 {
-  padding-top: 5rem;
+.pt-6 {
+  padding-top: 1.5rem;
 }
 
 .pb-0 {
   padding-bottom: 0px;
-}
-
-.pt-6 {
-  padding-top: 1.5rem;
 }
 
 .text-left {
@@ -2082,6 +2127,14 @@ video {
   font-size: 1.5rem;
 }
 
+.text-\[1\.52rem\] {
+  font-size: 1.52rem;
+}
+
+.text-\[1\.rem\] {
+  font-size: 1.rem;
+}
+
 .font-bold {
   font-weight: 700;
 }
@@ -2158,12 +2211,12 @@ video {
   line-height: 1.375;
 }
 
-.leading-\[1\.3\] {
-  line-height: 1.3;
-}
-
 .leading-\[48px\] {
   line-height: 48px;
+}
+
+.leading-\[1\.3\] {
+  line-height: 1.3;
 }
 
 .tracking-wider {
@@ -2609,6 +2662,26 @@ input[type=range]::-webkit-slider-thumb {
 .hover\:bg-slate-400:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(148 163 184 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-slate-50:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 250 252 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-slate-500:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(100 116 139 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-red-500:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-red-600:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
 }
 
 .hover\:font-semibold:hover {
